--- a/us/template/index.html
+++ b/us/template/index.html
@@ -1248,6 +1248,12 @@
         }else if (commandData.command === "home") {
             window.location.href = "http://127.0.0.1:8000/";
         }
+        else if (commandData.command === "hosted_tour") {
+            window.location.href = "http://127.0.0.1:8000/hosted_tour";
+        }
+        else if (commandData.command === "hosted_trial") {
+            window.location.href = "http://127.0.0.1:8000/hosted_trials";
+        }
       
     },
     rootEl: document.getElementById("alan-btn"),
