--- a/us/template/hosted_trials.html
+++ b/us/template/hosted_trials.html
@@ -309,6 +309,43 @@
             {% else %}
             <p class="text-danger">No Finished Trials</p>
             {% endif %}
+            <div class="mt-5">
+                <p class="h4 text-secondary fw-bold">View Winners</p>
+
+            </div>
+
+            {% if view_winners %}
+            {% for i in view_winners %}
+
+            <div class="mt-4 border-top pt-4">
+
+                <div class="d-flex flex-lg-row flex-column gap-5">
+                    <div class="col-lg-9 col-12">
+                        <div class="mt-3 fs-5">
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Date: </p>
+                                <p>{{i.trail_date}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Venue: </p>
+                                <p>{{i.place}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">District: </p>
+                                <p>{{i.district}}</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column gap-3 justify-content-center">
+                        <a class="btn btn-warning" href="{% url 'view_trial_winners' i.id %}">View Players</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p class="text-danger">No Finished Trials</p>
+            {% endif %}
             
 
             
