--- a/us/template/select_player_scout.html
+++ b/us/template/select_player_scout.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -205,22 +204,18 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ClubScout' %}">Scouts</a>
                         </li>
-                        
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
+                                href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
+                            <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'tournaments' %}">Tournaments</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'enrolled' %}">Enrolled</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'hosted_tour' %}">Hosted</a>
+                            <a class="nav-link text-white" aria-current="page" href="{% url 'hosted_trials' %}">Trials</a>
                         </li>
                     </ul>
                 </div>
@@ -237,188 +232,59 @@
     {% endif %}
     <div class="d-flex flex-wrap justify-content-center mt-4">
 
-        <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-            <div>
-                <p class="h4 text-secondary fw-bold">Tournaments in your district</p>
+        <div class="col-lg-8 col-12 player-feeds m-3 p-5 table-responsive rounded bg-white shadow-lg">
+            <form method="post">
+                {% csrf_token %}
+            <table class="table table-hover table-dark table-striped">
+                <tr class="fw-bold">
+                    <td>
+                        Name
+                    </td>
+                    <td>
+                        District
+                    </td>
+                    <td>
+                        locality
+                    </td>
+                    <td>
+                        Position
+                    </td>
+                    <td>
+                        Select
+                    </td>
+                </tr>
+                {% for i in participants %}
+                    <tr>
+                        <td>
+                            {{i.first_name}} {{i.last_name}}
+                        </td>
+                        <td>
+                            {{i.district}}
+                        </td>
+                        <td>
+                            {{i.locality}}
+                        </td>
+                        <td>
+                            {{i.player_pos}}
+                        </td>
+                        <td>
+                            <input type="checkbox" value="{{i.id}}" name="players" class="form-check">
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+        </form>
+            
 
-            </div>
+            
 
-            {% if feeds %}
-            {% for i in feeds %}
-
-            <div class="mt-4 border-top pt-4">
-                <div class="d-flex">
-                    <div class="feed-img">
-                        <img class="w-100 rounded-circle" src={{i.user.img.url}} alt="">
-                    </div>
-                    <div class="ms-2 d-flex">
-                        <p class="fw-bold">
-                            {{i.user.club_name}}
-                        </p>
-                        <p class="ms-2 text-secondary">{{i.time}}</p>
-                    </div>
-                </div>
-                <div class="w-100 mt-3">
-
-                    {% if i.img.url != '' %}
-                    <div class="w-100 mt-3">
-                        <img class="w-100" src="{{i.img}}" alt="">
-                    </div>
-                    {% endif %}
-                </div>
-                <p class="fw-bold mt-5">{{i.title}}</p>
-                <p>{{i.desc}}</p>
-                <div class="mt-3">
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Tournament Conductors: </p>
-                        <p>{{i.user.club_name}}</p>
-                    </div>
-
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Date: </p>
-                        <p>{{i.tour_date}}</p>
-                    </div>
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Venue: </p>
-                        <p>{{i.place}}</p>
-                    </div>
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">District: </p>
-                        <p>{{i.district}}</p>
-                    </div>
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Contact Number: </p>
-                        <p>+91 {{i.contact}}</p>
-                    </div>
-                    {% if i.slots <= 0 %}
-                    <p class="text-danger">No slots left in this tournament</p>
-                    {% else %}
-                    <div class="d-flex gap-1 text-success">
-                        <p class="fw-bold">Slots Left: </p>
-                        <p>{{i.slots}}</p>
-                    </div>
-
-    <button onclick="showConfirmation('{{ i.id }}')" class="btn btn-primary">Enroll</button>
-    {% endif %}
-    <a class="btn btn-info" href="{% url 'tour_map' i.id %}">View in map</a>
-
-                    
-
-                </div>
-            </div>
-            {% endfor %}
-            {% else %}
-            <p class="text-danger">No upcoming tounaments in your district</p>
-            {% endif %}
-
+            
 
         </div>
-        <div class="col-lg-5 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-            <div>
-                <p class="h4 text-secondary fw-bold">Other Tournaments</p>
 
-            </div>
-
-
-            {% if feeds1 %}
-            {% for i in feeds1 %}
-
-            <div class="mt-4 border-top pt-4">
-                <div class="d-flex">
-                    <div class="feed-img">
-                        <img class="w-100 rounded-circle" src={{i.user.img.url}} alt="">
-                    </div>
-                    <div class="ms-2 d-flex">
-                        <p class="fw-bold">
-                            {{i.user.club_name}}
-                        </p>
-                        <p class="ms-2 text-secondary">{{i.time}}</p>
-                        {% if i.edited %}
-                            <p class="ms-2 text-secondary">Edited</p>
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="w-100 mt-3">
-
-                    {% if i.img.url != '' %}
-                    <div class="w-100 mt-3">
-                        <img class="w-100" src="{{i.img}}" alt="">
-                    </div>
-                    {% endif %}
-                </div>
-                <p class="fw-bold mt-5">{{i.title}}</p>
-                <p>{{i.desc}}</p>
-                <div class="mt-3">
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Tournament Conductors: </p>
-                        <p>{{i.user.club_name}}</p>
-                    </div>
-
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Date: </p>
-                        <p>{{i.tour_date}}</p>
-                    </div>
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">Venue: </p>
-                        <p>{{i.place}}</p>
-                    </div>
-                    <div class="d-flex gap-1">
-                        <p class="fw-bold">District: </p>
-                        <p>{{i.district}}</p>
-                    </div>
-                    {% if i.slots <= 0 %}
-                    <p class="text-danger">No slots left in this tournament</p>
-                    {% else %}
-                    <div class="d-flex gap-1 text-success">
-                        <p class="fw-bold">Slots Left: </p>
-                        <p>{{i.slots}}</p>
-                    </div>
-
-    <button onclick="showConfirmation('{{ i.id }}')" class="btn btn-primary">Enroll</button>
-    {% endif %}
-    {% if i.latitude is not None %}
-    <a class="btn btn-info" href="{% url 'tour_map' i.id %}">View in map</a>
-    {% endif %}
-
-
-
-
-                </div>
-            </div>
-            {% endfor %}
-            {% else %}
-            <p class="text-danger">No upcoming tounaments</p>
-            {% endif %}
-
-        </div>
 
     </div>
-    <div class="alan-btn"></div></body>
-    <script src="https://studio.alan.app/web/lib/alan_lib.min.js"></script>
-    <script type="text/javascript"
-     src="https://studio.alan.app/web/lib/alan_lib.min.js"></script>
-    <script>
-      var alanBtnInstance = alanBtn({
-        key: "c5c3927b6204baee8ef04ad65d7ab54e2e956eca572e1d8b807a3e2338fdd0dc/stage",
-        onCommand: function (commandData) {
-          if (commandData.command === "feed") {
-            window.location.href = "http://127.0.0.1:8000/following_feeds";
-          }else if (commandData.command === "scout") {
-                window.location.href = "http://127.0.0.1:8000/PlayerScout";
-            } else if (commandData.command === "club") {
-                window.location.href = "http://127.0.0.1:8000/player-club";
-            } else if (commandData.command === "trail") {
-                window.location.href = "http://127.0.0.1:8000/trial_list";
-            } else if (commandData.command === "tour") {
-                window.location.href = "http://127.0.0.1:8000/tournaments";
-            }else if (commandData.command === "home") {
-                window.location.href = "http://127.0.0.1:8000/";
-            }
-          
-        },
-        rootEl: document.getElementById("alan-btn"),
-      });
-    </script>
 </body>
 
 </html>
@@ -511,15 +377,15 @@
 
         Swal.fire({
             title: 'Are you sure?',
-            text: 'Do you want to enroll in this tournament?',
-            icon: 'question',
+            text: 'Do you want to cancel this trial?',
+            icon: 'error',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
             confirmButtonText: 'Yes'
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0', tour_id);
+                window.location.href = "{% url 'cancel_trial' 0 %}".replace('0', tour_id);
             }
         });
     }
