--- a/us/template/club-player.html
+++ b/us/template/club-player.html
@@ -50,6 +50,89 @@
     .user-name {
         font-weight: bold;
     }
+    .card1 {
+            width: 420px;
+            border-radius: 1rem;
+            background: linear-gradient(rgb(60, 21, 60), rgb(41, 0, 41));
+            padding: 1rem;
+        }
+
+        .infos {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            grid-gap: 1rem;
+            gap: 1rem;
+        }
+
+        .image {
+            height: 7rem;
+            width: 7rem;
+            border-radius: 0.5rem;
+            background-color: rgb(118, 36, 194);
+            background: linear-gradient(rgb(60, 21, 60), rgb(41, 0, 41));
+        }
+
+        .info {
+            height: 10rem;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .name {
+            font-size: 1.25rem;
+            line-height: 1.75rem;
+            font-weight: 500;
+            color: rgba(255, 255, 255, 1);
+        }
+
+        .function {
+            font-size: 0.75rem;
+            line-height: 0rem;
+            color: rgba(156, 163, 175, 1);
+        }
+
+        .stats {
+            width: 100%;
+            border-radius: 0.5rem;
+            background-color: rgba(255, 255, 255, 1);
+            padding: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 0.75rem;
+            color: rgba(0, 0, 0, 1);
+        }
+
+        .flex {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0 4px;
+        }
+
+        .state-value {
+            font-weight: 700;
+            color: rgb(118, 36, 194);
+        }
+
+        .request {
+            margin-top: 1.5rem;
+            width: 100%;
+            border: 1px solid transparent;
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            line-height: 1.5rem;
+            transition: all .3s ease;
+        }
+
+        .request:hover {
+            background-color: rgb(118, 36, 194);
+            color: #fff;
+        }
     @media (max-width: 991.98px) {
         #search-results{
             position: fixed;
@@ -257,56 +340,62 @@
         </div>
         {% endfor %}
         {% if shortlisted_players|length > 0 %}
-        <h2 class="mt-5">Shortlisted Players</h2>
+        <h2 class="mt-5 fw-bold text-warning">Shortlisted Players</h2>
         {% endif %}
-        {% for i in shortlisted_players %}
-        <script>console.log("{{ i.img }}")</script>
-        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
-            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
-                <div class="d-flex align-items-center">
-                    <div class="player-scout-img">
-                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+        <div class="d-flex flex-wrap gap-2 justify-content-center">
+            {% for i in shortlisted_players %}
+
+        <div class="card1">
+            <div class="infos">
+                <div class="image"><img class="w-100 rounded" src="{{i.img}}" alt=""></div>
+                <div class="info">
+                    <div>
+                        <a class="text-decoration-none" href="{% url 'player-home' i.id %}">
+                            <p class="name">
+                                {{i.first_name}} {{i.last_name}}
+                            </p>
+                        </a>
+                        <p class="function">
+                            {{i.district}}
+                        </p>
+                        <p class="function">
+                            {{i.locality}}
+                        </p>
+                        <p class="text-white">Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                            {% if j < ability %}
+                            <i class="bi bi-star-fill text-warning"></i>
+                            {% else %}
+                            <i class="bi bi-star text-warning"></i>
+                            {% endif %}
+                            {% endfor %}
+                            {% endwith %}
+                        </p>
+                        <p class="text-white">Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                            {% if j < potential %}
+                            <i class="bi bi-star-fill text-warning"></i>
+                            {% else %}
+                            <i class="bi bi-star text-warning"></i>
+                            {% endif %}
+                            {% endfor %}
+                            {% endwith %}
+                        </p>
                     </div>
-                </div>
-                
-                <div class="ms-3 col-lg-7 col-12">
-                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
-                    <p class=""><b>District: </b>{{i.district}} </p>
-                    <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
-                        {% if j < ability %}
-                        <i class="bi bi-star-fill text-warning"></i>
-                        {% else %}
-                        <i class="bi bi-star text-warning"></i>
-                        {% endif %}
-                        {% endfor %}
-                        {% endwith %}
-                    </p>
-                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
-                        {% if j < potential %}
-                        <i class="bi bi-star-fill text-warning"></i>
-                        {% else %}
-                        <i class="bi bi-star text-warning"></i>
-                        {% endif %}
-                        {% endfor %}
-                        {% endwith %}
-                    </p>
-                </div>
-                
-                <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-5">
-                        {% for co in cont %}
-                        {% if co in shortlisted_players %}
-                        <p>Hi</p>
-                        {% endif %}
-                        {% endfor %}
-                        <a href="{% url 'Contract' i.id %}"><button class="btn btn-outline-primary">Offer Contract</button></a>
-                    </div>
+
                 </div>
             </div>
             
+            
+                    {% for co in cont %}
+                    {% if co in shortlisted_players %}
+                    <p>Hi</p>
+                    {% endif %}
+                    {% endfor %}
+                    <a class="btn btn-outline-warning w-100" href="{% url 'Contract' i.id %}">Offer Contract</a>
+
+                
         </div>
         {% endfor %}
+        </div>
         {% if interested_players|length > 0 %}
         <h2 class="mt-5">Players that are interested in your club</h2>
         {% endif %}
@@ -354,50 +443,58 @@
         </div>
         {% endfor %}
         {% if not_interested_players|length > 0 %}
-        <h2 class="mt-5">Other players</h2>
+        <h2 class="mt-5 fw-bold text-info">Other players</h2>
         {% endif %}
-        {% for i in not_interested_players %}
-        <script>console.log("{{ i.img }}")</script>
-        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
-            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
-                <div class="d-flex align-items-center">
-                    <div class="player-scout-img">
-                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+        <div class="d-flex mt-3 justify-content-center flex-wrap gap-2">
+            {% for i in not_interested_players %}
+
+        <div class="card1">
+            <div class="infos">
+                <div class="image"><img class="w-100 rounded" src="{{i.img}}" alt=""></div>
+                <div class="info">
+                    <div>
+                        <a class="text-decoration-none" href="{% url 'player-home' i.id %}">
+                            <p class="name">
+                                {{i.first_name}} {{i.last_name}}
+                            </p>
+                        </a>
+                        <p class="function">
+                            {{i.district}}
+                        </p>
+                        <p class="function">
+                            {{i.locality}}
+                        </p>
+                        <p class="text-white">Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
+                            {% if j < ability %}
+                            <i class="bi bi-star-fill text-warning"></i>
+                            {% else %}
+                            <i class="bi bi-star text-warning"></i>
+                            {% endif %}
+                            {% endfor %}
+                            {% endwith %}
+                        </p>
+                        <p class="text-white">Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
+                            {% if j < potential %}
+                            <i class="bi bi-star-fill text-warning"></i>
+                            {% else %}
+                            <i class="bi bi-star text-warning"></i>
+                            {% endif %}
+                            {% endfor %}
+                            {% endwith %}
+                        </p>
                     </div>
-                </div>
-                
-                <div class="ms-3 col-lg-7 col-12">
-                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
-                    <p class=""><b>District: </b>{{i.district}} </p>
-                    <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
-                        {% if j < ability %}
-                        <i class="bi bi-star-fill text-warning"></i>
-                        {% else %}
-                        <i class="bi bi-star text-warning"></i>
-                        {% endif %}
-                        {% endfor %}
-                        {% endwith %}
-                    </p>
-                    <p>Potential:{% with potential=i.player_potential %} {% for j in abilityRange %}
-                        {% if j < potential %}
-                        <i class="bi bi-star-fill text-warning"></i>
-                        {% else %}
-                        <i class="bi bi-star text-warning"></i>
-                        {% endif %}
-                        {% endfor %}
-                        {% endwith %}
-                    </p>                </div>
-                
-                <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-5">
-                        <a href="{% url 'ShortlistPlayer' i.id %}"><button class="btn btn-outline-primary">Shortlist Player</button></a>
-                    </div>
+
                 </div>
             </div>
             
+            
+            <a class="btn btn-outline-info w-100" href="{% url 'ShortlistPlayer' i.id %}">Shortlist Player</a>
+
+
+                
         </div>
         {% endfor %}
+        </div>
     </div>
     <div class="alan-btn"></div></body>
     <script src="https://studio.alan.app/web/lib/alan_lib.min.js"></script>
