--- a/us/template/player-scout.html
+++ b/us/template/player-scout.html
@@ -50,6 +50,89 @@
     .user-name {
         font-weight: bold;
     }
+    .card1 {
+            width: 420px;
+            border-radius: 1rem;
+            background: linear-gradient(rgb(60, 21, 60), rgb(41, 0, 41));
+            padding: 1rem;
+        }
+
+        .infos {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            grid-gap: 1rem;
+            gap: 1rem;
+        }
+
+        .image {
+            height: 7rem;
+            width: 7rem;
+            border-radius: 0.5rem;
+            background-color: rgb(118, 36, 194);
+            background: linear-gradient(rgb(60, 21, 60), rgb(41, 0, 41));
+        }
+
+        .info {
+            height: 10rem;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .name {
+            font-size: 1.25rem;
+            line-height: 1.75rem;
+            font-weight: 500;
+            color: rgba(255, 255, 255, 1);
+        }
+
+        .function {
+            font-size: 0.75rem;
+            line-height: 0rem;
+            color: rgba(156, 163, 175, 1);
+        }
+
+        .stats {
+            width: 100%;
+            border-radius: 0.5rem;
+            background-color: rgba(255, 255, 255, 1);
+            padding: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 0.75rem;
+            color: rgba(0, 0, 0, 1);
+        }
+
+        .flex {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0 4px;
+        }
+
+        .state-value {
+            font-weight: 700;
+            color: rgb(118, 36, 194);
+        }
+
+        .request {
+            margin-top: 1.5rem;
+            width: 100%;
+            border: 1px solid transparent;
+            border-radius: 0.5rem;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            line-height: 1.5rem;
+            transition: all .3s ease;
+        }
+
+        .request:hover {
+            background-color: rgb(118, 36, 194);
+            color: #fff;
+        }
     @media (max-width: 991.98px) {
         #search-results{
             position: fixed;
@@ -112,72 +195,89 @@
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
         {% if shortlisted_scout|length > 0 %}
-        <h2 class="mt-5">Shortlisted Scouts</h2>
+        <h2 class="mt-5 fw-bold text-warning">Shortlisted Scouts</h2>
         {% endif %}
         {% for i in shortlisted_scout %}
         
-        <script>console.log("{{ i.img }}")</script>
-        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
-            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
-                <div class="d-flex align-items-center">
-                    <div class="player-scout-img">
-                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+        
+
+
+
+        <div class="card1 mt-3">
+            <div class="infos">
+                <div class="image"><img class="w-100 rounded" src="{{i.img}}" alt=""></div>
+                <div class="info">
+                    <div>
+                        <a class="text-decoration-none" href="{% url 'scout-home' i.id %}">
+                            <p class="name">
+                                {{i.first_name}} {{i.last_name}}
+                            </p>
+                        </a>
+                        <p class="function">
+                            {{i.district}}
+                        </p>
+                        <p class="function">
+                            {{i.locality}}
+                        </p>
+                        <p class="fw-bold text-white">Rating: <i class="bi bi-star-fill text-warning"></i><i
+                                class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
+                                class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i>
+                        </p>
                     </div>
-                </div>
-                
-                <div class="ms-3 col-lg-5 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p>
-                    <p class=""><b>District: </b>{{i.district}} </p>
-                    <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class="fw-bold">Recommendation: <i class="bi bi-star-fill text-warning"></i><i
-                        class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
-                        class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                </div>
-                
-                <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-5">
-                        {% if user.scouted_by == '' %}
-                        <p class="text-success"><i class="bi bi-check-circle-fill"></i> You're request has been recorded, waiting for scout response</p>
-                        {% else %}
-                        <p class="text-primary"><i class="bi bi-check-circle-fill"></i> You're scout reports are released by {{user.scouted_by}}</p>
-                        {% endif %}
-                    </div>
+
                 </div>
             </div>
             
+            <div class="d-flex justify-content-center">
+                {% if user.scouted_by == '' %}
+            <p class="text-warning"><i class="bi bi-check-circle-fill"></i> You're request has been recorded, waiting for scout response</p>
+            {% else %}
+            <p class="text-warning"><i class="bi bi-check-circle-fill"></i> You're scout reports are released by {{user.scouted_by}}</p>
+            {% endif %}
+            </div>
+                
         </div>
+
         {% endfor %}
         {% if not_shortlisted_scout|length > 0 %}
-        <h2 class="mt-5">Other Scouts</h2>
+        <h2 class="mt-5 fw-bold text-info">Other Scouts</h2>
         {% endif %}
-        {% for i in not_shortlisted_scout %}
-        <script>console.log("{{ i.img }}")</script>
-        <div class="col-10 bg-white rounded p-4 shadow-lg mt-5">
-            <div class="border mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-start align-items-center w-100 p-3 rounded">
-                <div class="d-flex align-items-center">
-                    <div class="player-scout-img">
-                        <img class="w-100 rounded-circle" src={{i.img}} alt="">
+        <div class="d-flex justify-content-center flex-wrap gap-2">
+            {% for i in not_shortlisted_scout %}
+        
+
+
+
+        <div class="card1 mt-3">
+            <div class="infos">
+                <div class="image"><img class="w-100 rounded" src="{{i.img}}" alt=""></div>
+                <div class="info">
+                    <div>
+                        <a class="text-decoration-none" href="{% url 'scout-home' i.id %}">
+                            <p class="name">
+                                {{i.first_name}} {{i.last_name}}
+                            </p>
+                        </a>
+                        <p class="function">
+                            {{i.district}}
+                        </p>
+                        <p class="function">
+                            {{i.locality}}
+                        </p>
+                        <p class="fw-bold text-white">Rating: <i class="bi bi-star-fill text-warning"></i><i
+                                class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
+                                class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i>
+                        </p>
                     </div>
-                </div>
-                
-                <div class="ms-3 col-lg-5 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p>
-                    <p class=""><b>District: </b>{{i.district}} </p>
-                    <p class=""><b>Locality </b>{{i.locality}}</p>
-                    <p class="fw-bold">Recommendation: <i class="bi bi-star-fill text-warning"></i><i
-                        class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i
-                        class="bi bi-star-fill text-warning"></i><i class="bi bi-star-half text-warning"></i></p>
-                </div>
-                
-                <div class="d-flex justify-content-lg-end justify-content-center w-100">
-                    <div class="d-flex align-items-center justify-content-center col-5">
-                        <a href="{% url 'ShortlistScout' i.id %}"><button class="btn btn-outline-primary">Enquire Scout</button></a>
-                    </div>
+
                 </div>
             </div>
             
+            <a class="btn btn-outline-info w-100" href="{% url 'ShortlistScout' i.id %}">Enquire Scout</a>
+                
         </div>
         {% endfor %}
+        </div>
     </div>
     <div class="alan-btn"></div></body>
     <script src="https://studio.alan.app/web/lib/alan_lib.min.js"></script>
